Bug 692742 (noscroll): Tweak - use '0' in place of '0px' It cropped up in review recently and I didn't have a reason to prefer 0px

--- a/mozilla/gcli/ui/gcliterm.css
+++ b/mozilla/gcli/ui/gcliterm.css
@@ -42,7 +42,7 @@
   color: #000;
   background: rgba(250, 250, 250, 0.8);
   border: 1px solid #AAA;
-  border-bottom: 0px !important;
+  border-bottom: 0 !important;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
   margin-left: 10px;
